add create conversation method
