# api-gateway/docs/swagger.json
@@ -6,6 +6,60 @@
         "version": "1.0"
     },
     "paths": {
+        "/conversations": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create conversation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "conversations"
+                ],
+                "summary": "Create conversation",
+                "parameters": [
+                    {
+                        "description": "Request body containing user_id and second_user_id",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/conversationhandler.createConversationRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "security": [
@@ -395,6 +449,14 @@
         }
     },
     "definitions": {
+        "conversationhandler.createConversationRequest": {
+            "type": "object",
+            "properties": {
+                "second_user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "jwtmanager.ReturnTokenType": {
             "type": "object",
             "properties": {
